Actualiza manuales de Jenkins y SonarQube con los cambios del backend.
Documenta el Jenkinsfile minimo actual y como reactivar el pipeline
completo desde Jenkinsfile_v1, y agrega una seccion completa para
correr tests, cobertura JaCoCo y el analisis de Sonar del backend
(incluye la variable de entorno SONAR_TOKEN y el fix de Byte Buddy
para Java 25).

Co-authored-by: Cursor <cursoragent@cursor.com>